fix: Button icon, align prev/next buttons, modified seconds fixes
- Fix: Align the headers link icon with the header text.
- Fix: Prevent copy/collapse buttons wrapping.
- Fix: Reduce width and align prev/next buttons.
- Fix: Prefix seconds modified time (i.e. 2 => 02).
- Fix: Include the versions stacks icon as an event delegate.

--- a/css/source/github-markdown.css
+++ b/css/source/github-markdown.css
@@ -413,7 +413,7 @@
 	line-height: 1;
 	/* Keep the anchor hyper-link on the right due limited space on mobile
 	devices.*//*float: left;*//*margin-left: -20px;*//*padding-right: 4px;*/
-	margin-left: 6px;
+	margin-left: 3px;
 }
 
 .markdown-body .anchor:focus {
